--- a/SPA/Legacy/SPA_Sample/SPA_Sample/packages.config
+++ b/SPA/Legacy/SPA_Sample/SPA_Sample/packages.config
@@ -3,10 +3,12 @@
   <package id="angularjs" version="1.6.1" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net46" />
   <package id="knockoutjs" version="3.4.1" targetFramework="net46" />
+  <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc.ja" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
@@ -36,5 +38,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Touryo.Infrastructure.Framework" version="2.2.0" targetFramework="net46" />
+  <package id="Touryo.Infrastructure.Public" version="2.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
