--- a/SPA/React/react_template/package.json
+++ b/SPA/React/react_template/package.json
@@ -13,9 +13,9 @@
     "react-dom": "15.6.1",
     "react-hot-loader": "3.0.0-beta.7",
     "react-router-dom": "4.1.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "style-loader": "0.18.2",
-    "url-loader": "0.5.9"
+    "url-loader": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
