--- a/SPA/React/redux_template/package.json
+++ b/SPA/React/redux_template/package.json
@@ -18,12 +18,12 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "4.1.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.18.2",
-    "url-loader": "0.5.9"
+    "url-loader": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
