--- a/SPA/Legacy/SPA_Sample/SPA_Sample/packages.config
+++ b/SPA/Legacy/SPA_Sample/SPA_Sample/packages.config
@@ -38,5 +38,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Touryo.Infrastructure.Framework" version="2.3.0" targetFramework="net46" />
+  <package id="Touryo.Infrastructure.Public" version="2.3.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
