--- a/SPA/React/react_template/package.json
+++ b/SPA/React/react_template/package.json
@@ -8,6 +8,7 @@
     "file-loader": "0.11.2",
     "isomorphic-fetch": "2.2.1",
     "json-loader": "0.5.4",
+    "lodash.clonedeep": "^4.5.0",
     "react": "15.6.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "15.6.1",
