--- a/UI/SPA/React/redux_template/package.json
+++ b/UI/SPA/React/redux_template/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "css-loader": "0.28.4",
+    "crypto": "^1.0.1",
+    "css-loader": "^3.4.2",
     "domain-task": "^3.0.3",
     "event-source-polyfill": "0.0.9",
     "file-loader": "0.11.2",
@@ -18,7 +19,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "4.1.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^3.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -30,5 +31,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
